--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Vite App to S3
 on:
   push:
     branches:
-      - master  # Replace 'main' with your branch name if necessary
+      - master  # Change this from 'main' to 'master'
 
 jobs:
   deploy:
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v3
 
       # Step 2: Set up Node.js
-      - name: Set up Node.js
+        - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22.13.0  # Updated Node.js version
+          node-version: 18  # Adjust based on your project requirements
 
       # Step 3: Install dependencies and build
       - name: Install Dependencies and Build
@@ -28,7 +28,7 @@ jobs:
 
       # Step 4: Sync build files to S3
       - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@v0.5.2
+        uses: jakejarvis/s3-sync-action@main  # Using the main branch instead of a version
         with:
           args: --acl public-read --delete
         env:
@@ -36,4 +36,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: dist  # Vite build output directory
+          SOURCE_DIR: dist
+
