--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_S3_BUCKET: ${{ BUCKET_NAME }}
+          AWS_ACCESS_KEY_ID: ${{ AWS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ AWS_SECRET }}
+          AWS_REGION: ${{ AWS_REGION }}
           SOURCE_DIR: dist
