--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}  # Replace with your secret name
+          AWS_S3_BUCKET: bot2do # Replace with your secret name
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Replace with your secret name
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Replace with your secret name
-          AWS_REGION: ${{ secrets.AWS_REGION }}  # Replace with your secret name
+          AWS_REGION: ap-south-1 # Replace with your secret name
           SOURCE_DIR: dist
 
