--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,41 @@
-name: Deploy React App to S3
+name: Deploy Vite React App to S3
 
 on:
   push:
     branches:
-      - master
+      - master # Replace 'main' with 'master'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
+      # Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: '16' # Ensure compatibility with your project
 
+      # Install dependencies
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build project
+      # Build the application
+      - name: Build Vite app
         run: npm run build
 
-      - name: Sync to S3
-        uses: jakejarvis/s3-sync-action@master
+      # Deploy to S3
+      - name: Deploy to S3
+        uses: jakejarvis/s3-sync-action@v0.5.1
         with:
           args: --acl public-read --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.S3_BUCKET_NAME }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: dist/
+          SOURCE_DIR: dist # Vite outputs the build to the 'dist' folder by default
